# OJ_sys

./: .gitignore  process.md
Nginx/conf/: nginx.conf
Nginx/html/: login.html  test.html
Nginx/html/admin/: admin-dashboard.html
Nginx/html/judge_page/: better-coding.html  problem_main.html
Nginx/html/logIn/: host.html  online judge.html  staff-log in.html  stu-log in.html
Nginx/html/public/: 1.html  Judge.html  home-page  home-page.html  problem_main.html
Nginx/html/staff/: staff-assignments.html  staff-courses.html  staff-dashboard.html  staff-profile.html  staff-students.html  staff-submissions.html
Nginx/html/student/: stu-assignments.html  stu-courses.html  stu-grades.html  stu-home.html  stu-profile.html  stu-settings.html
Nginx/html/test/: admin-dashboard.html
Nginx/nginx-1.28.0/: Makefile
Nginx/nginx-1.28.0/objs/: Makefile  autoconf.err  nginx  nginx.8  ngx_auto_config.h
OJ_Judge/code/: CMakeLists.txt  judge.cpp  judge.h  linuxHeader.h  main.cpp  pthread_pool.cpp  pthread_pool.h  tool.cpp  tool.h  user_info.cpp  user_info.h
OJ_Judge/conf/: OJ_Judge.json
OJ_Judge/isolate/problem_ans/: P00002_output_2.txt
OJ_Judge/isolate/waiting_Judge/: P00001  admin__871.cpp  admin__P00001_output_2.txt  student__P00001_output_1.txt  teacher__P00002.cpp
OJ_Judge/test_isolate/: main  main.cpp  test.cpp
OJ_Judge/test_isolate/exec/: test
